--- a/package.json
+++ b/package.json
@@ -71,13 +71,6 @@
     "web-vitals": "^5.1.0"
   },
   "overrides": {
-    "html-to-text": {
-      "htmlparser2": {
-        "entities": "^4.5.0"
-      }
-    }
-  },
-  "resolutions": {
-    "html-to-text/htmlparser2/entities": "^4.5.0"
+    "html-to-text": "^8.2.1"
   }
 }
